Updating App Name to version 4

--- a/mia-s-app-chipmunk.yaml
+++ b/mia-s-app-chipmunk.yaml
@@ -10,7 +10,7 @@ data:
       </head>
       <body>
         Hello from KOTS.
-        <p>This is text from a user config value: 'mia@replicated.com' </p>
+        <p>This is text from a user config value: 'changing this' </p>
         </br>
         This is a hidden value:
         </br>
